--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Solving Maze Demo"
     />
+    <meta property='og:title' content='Maze Solver'/>
+    <meta property='og:image' content='https://i2.paste.pics/CJCMK.png?trs=475c231022680624d5590487b5db54382c3c1bd4cf6636753bc4d2d0f400a67e'/>
+    <meta property='og:url' content='https://path-maze.herokuapp.com/'/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
